updates to move java 16