@@ -12,8 +12,9 @@
 
     <properties>
         <!-- Compiler properties for maven -->
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.source>11</maven.compiler.source>
+        <jvm.target.version>16</jvm.target.version>
+        <maven.compiler.target>${jvm.target.version}</maven.compiler.target>
+        <maven.compiler.source>${jvm.target.version}</maven.compiler.source>
         <encoding>UTF-8</encoding>
         <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
@@ -21,8 +22,8 @@
 
         <spring.version>[5.2.5,)</spring.version>
         <junit.version>[5.6.1,)</junit.version>
-        <lombok.version>[1.18.10,)</lombok.version>
-        <errorprone.version>2.3.4</errorprone.version>
+        <lombok.version>1.18.20</lombok.version>
+        <errorprone.version>2.7.1</errorprone.version>
         <!-- required for @PostConstruct and @PreDestroy -->
         <jakarta.annotation.version>1.3.5</jakarta.annotation.version>
         <apache.lang3.common.version>3.9</apache.lang3.common.version>
@@ -128,15 +129,29 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
-                    <release>11</release>
+                    <source>${jvm.target.version}</source>
+                    <target>${jvm.target.version}</target>
+                    <release>${jvm.target.version}</release>
                     <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                    <encoding>UTF-8</encoding>
+                    <fork>true</fork>
                     <!-- https://errorprone.info/docs/installation -->
                     <!-- https://github.com/RichardBradley/error-prone/blob/00df8f2a7a1d9a26ba9e7aa86f4561940b7759ed/examples/maven-with-lombok/pom.xml -->
                     <compilerArgs>
+                        <arg>--enable-preview</arg>
                         <arg>-XDcompilePolicy=simple</arg>
-                        <arg>-Xplugin:ErrorProne -XepDisableWarningsInGeneratedCode</arg>
+                        <!-- for errorProne plugin to enable -->
+                        <arg>-Xplugin:ErrorProne</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                     </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
@@ -156,6 +171,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
